<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/kino_maksi_navigation"
    app:startDestination="@id/mainPageFragment">
    <fragment
        android:id="@+id/mainPageFragment"
        android:name="ru.maxi.kinomaxi.demo.mainPage.ui.MainPageFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main_page">
        <action
            android:id="@+id/action_mainPageFragment_to_favoritesFragment"
            app:destination="@+id/favoritesFragment"
            app:popUpTo="@id/mainPageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_mainPageFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="movieId"
                app:argType="long" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="ru.maxi.kinomaxi.demo.favorites.ui.FavoritesFragment"
        android:label="@string/favorite_movies_list_title"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favoritesFragment_to_movieDetailsFragment"
            app:destination="@id/movieDetailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="movieId"
                app:argType="long"
                />
        </action>
    </fragment>
    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="ru.maxi.kinomaxi.demo.movieDetails.ui.MovieDetailsFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_movie_details">
        <argument
            android:name="movieId"
            app:argType="long" />
        <action
            android:id="@+id/action_movieDetailsFragment_to_mainPageFragment"
            app:destination="@id/mainPageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/authorizationFragment"
        android:name="ru.maxi.kinomaxi.demo.authorization.ui.AuthorizationFragment"
        android:label="@string/login_page_title"
        tools:layout="@layout/fragment_authorization">
        <action
            android:id="@+id/action_authorizationFragment_to_accountDetailsFragment"
            app:destination="@id/accountDetailsFragment"
            app:popUpTo="@id/authorizationFragment"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/accountDetailsFragment"
        android:name="ru.maxi.kinomaxi.demo.accountDetails.ui.AccountDetailsFragment"
        android:label="@string/account_page_title"
        tools:layout="@layout/fragment_account_details">
</fragment>
</navigation>